# chat_backend

./: .dockerignore  .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 185150c30664_initial_migration.py
app/: main.py
app/api/routers/: __init__.py  chats.py  messages.py
app/core/: config.py
app/db/: repo.py  session.py
app/db/models/: base.py  chats.py  messages.py
app/schemas/: chats.py  messages.py
app/services/: chats.py  exceptions.py
deploy/: Dockerfile  docker-compose.yml
tests/test_api/: test_chats.py
